<resources>
    <string name="app_name" translatable="false">RPi-Monitor Watcher</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="menu_statistics">Statistics</string>
    <string name="menu_status">Status</string>
    <string name="menu_slogan">Watch your Raspberries!</string>
    <string name="menu_donate">Donate</string>
    <string name="menu_share">Share</string>
    <string name="menu_spread">Spread the world</string>
    <string name="menu_share_content">Check out this awesome \"Raspberry Pi Monitor Watcher\" app for Android!\n
        Raspberry Pi Monitor: https://github.com/XavierBerger/RPi-Monitor\n
        Raspberry Pi Monitor Watcher: https://github.com/tobiasfiechter/RPi-MonitorWatcher</string>
    <string name="status_uptime">uptime:</string>
    <string name="status_cpu_load">CPU load:</string>
    <string name="status_temperature">temperature:</string>
    <string name="status_memory">memory:</string>
    <string name="status_swap">swap:</string>
    <string name="status_sdcard">SD card:</string>
    <string name="status_network">network:</string>
    <string name="status_add_raspi_dialog_title">Add your Raspberry Pi</string>
    <string name="status_add_raspi_title">Title</string>
    <string name="status_add_raspi_ip">IP:Port (E.g. 192.168.0.3:8888)</string>
    <string name="status_add_raspi_error">Check your input</string>
</resources>
