<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_status" android:icon="@drawable/ic_menu_status"
            android:title="@string/menu_status" />
        <item android:id="@+id/nav_statistics" android:icon="@drawable/ic_menu_statistics"
            android:title="@string/menu_statistics" />
    </group>

    <item android:title="@string/menu_spread">
        <menu>
            <item android:id="@+id/nav_share" android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item android:id="@+id/nav_donate" android:icon="@drawable/ic_menu_donate"
                android:title="@string/menu_donate" />
        </menu>
    </item>

</menu>